<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Movilv2.0 "</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="numeroPregunta1">Pregunta:</string>
    <string name="numeroPregunta2">de 40</string>
    <string name="consultarMenu">Consultar manual</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="indicaciones1">El test teórico cuenta con 40 preguntas, aunque no hay límite de tiempo, recuerde que es un factor importante a la hora de realizar la verdadera prueba teórica de manejo</string>
    <string name="indicaciones2">Cada pregunta contiene 3 respuestas, donde solo una es correcta, si desea consultar un tema puede hacerlo en la misma pregunta, pues se provee la sección del manual donde viene dicho tema</string>
    <string name="indicaciones3">El test práctico cuenta con 20 preguntas, en este test usted deberá realizar maniobras interactivas con su celular como si este fuera el volante de su vehículo.</string>
    <string name="indicaciones4">Cada pregunta contiene solo una interacción correcta, si desea obtener ayuda de las iteraciones de este test diríjase a la opción de ayuda ubicada en la parte superior derecha de su pantalla.</string>
    <string name="iniciar">Iniciar</string>
    <string name="correctas">Correctas</string>
    <string name="incorrectas">Incorrectas</string>
    <string name="aceptar">Aceptar</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="resultado">Resultado</string>
    <string name="mensajeConfirmacion">¿Desea salir del test?</string>
    <string name="advertencia">Advertencia</string>
    <string name="title_activity_preguntas_teoricas">PreguntasTeoricas</string>
    <string name="title_activity_resultado_de_test">ResultadoDeTest</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="aprobado">Aprobado</string>
    <string name="reprobado">Reprobado</string>
    <string name="siguiente">Siguiente</string>
    <string name="siguientepregunta">Siguiente pregunta</string>
    <string name="manual">Manual</string>
    <string name="testteorico">Prueba teórica</string>
    <string name="testpractico">Prueba práctica</string>
    <string name="resultados">Resultados</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="sucursales">Sucursales</string>
    <string name="title_activity_menu">Menú</string>
    <string name="title_activity_sugerencias">Sugerencias</string>
    <string name="desearecibirrespuesta">Deseo recibir respuesta</string>
    <string name="sugerenciasInstrucciones">Danos un consejo o sugierenos una nueva pregunta</string>
    <string name="title_activity_resultados">Resultados</string>
    <string name="restriccionessugerencia">La sugerencia debe ser mínimo de 10 caracteres y el email de 8</string>
    <string name="title_activity_preguntas_practicas">PreguntasPracticas</string>
    <string name="title_activity_preguntas_instruciones">preguntasInstruciones</string>
    <string name="freno">Freno</string>
    <string name="tiempo">Tiempo</string>
    <string name="acelerador">Acelerador</string>
    <string name="correcto">Correcto</string>
    <string name="incorrecto">Incorrecto</string>
    <string name="todos">Todos</string>
    <string name="semana">Semana</string>
    <string name="mes">Mes</string>
    <string name="nota">Nota</string>
    <string name="tipo">Tipo</string>
    <string name="fecha">Fecha</string>
    <string name="title_activity_estadisticas">estadisticas</string>
    <string name="title_activity_login">login</string>
    <string name="app_id">581914115275994</string>
    <string name="update_status">nose</string>
    <string name="post_image">nose2</string>

</resources>
