<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gustavovargas.movilv20.Activity.preguntasInstruciones">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <TextView
            android:text="@string/instrucciones"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lbl2"
            style="@style/GreenText"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/indicaciones3"
            android:id="@+id/textView"
            style="@style/CampoTexto"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/indicaciones4"
            android:id="@+id/textView2"
            style="@style/CampoTexto"
            android:gravity="center_vertical|center_horizontal"
            android:layout_alignBottom="@+id/img_centro"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/img_centro"
            android:layout_toStartOf="@+id/img_centro"
            android:layout_gravity="right" />

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:id="@+id/img_senalTestPractico"
            android:src="@drawable/noparquear"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="right" />

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:id="@+id/btn_acelerador"
        style="@style/BotoneMenu"
        android:background="@drawable/azul"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="iniciarTestPractico" />

</RelativeLayout>
