<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gustavovargas.movilv20.PreguntasTeoricas"
    style="@style/Fondos">

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textAppearance="?android:attr/textAppearanceLarge"
android:text="@string/instrucciones"
android:layout_alignParentTop="true"
android:layout_centerHorizontal="true"
android:textSize="35dp"
android:textStyle="bold"
android:textColor="#ff1bca29"
    android:id="@+id/lbl_NotaResultado" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/indicaciones1"
        android:id="@+id/lbl_pregunta"
        android:textStyle="normal"
        android:textAlignment="center"
        style="@style/RedText"
        android:textSize="15dp"
        android:layout_below="@+id/lbl_NotaResultado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/indicaciones2"
        android:id="@+id/lbl_indicaciones2"
        android:layout_gravity="center"
        android:textStyle="normal"
        android:textAlignment="center"
        style="@style/RedText"
        android:layout_below="@+id/imageView2"
        android:layout_alignLeft="@+id/lbl_pregunta"
        android:layout_alignStart="@+id/lbl_pregunta"
        android:gravity="center_vertical|center_horizontal"
        android:layout_above="@+id/btn_iniciarTestTeorico" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"
        android:id="@+id/btn_iniciarTestTeorico"
        android:layout_gravity="center_horizontal|bottom"
        android:onClick="ingresar"
        style="@style/BotoneMenu"
        android:textStyle="bold|italic"
        android:background="@drawable/estilos"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_alignLeft="@+id/lbl_indicaciones2"
        android:layout_alignStart="@+id/lbl_indicaciones2" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView2"
        android:src="@drawable/noparquear"
        android:layout_below="@+id/lbl_pregunta"
        android:layout_alignRight="@+id/lbl_pregunta"
        android:layout_alignEnd="@+id/lbl_pregunta" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView3"
        android:src="@drawable/senalestransito"
        android:layout_below="@+id/lbl_pregunta"
        android:layout_alignLeft="@+id/lbl_pregunta"
        android:layout_alignStart="@+id/lbl_pregunta" />

</RelativeLayout>
